# rake-nltk

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  LICENSE  Pipfile  README.md  README.rst  pyproject.toml  rake.py  rake_test.py  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: OWNERS
.github/workflows/: pytest.yml
docs/: Makefile  advanced.rst  api.rst  conf.py  index.rst  make.bat
docs/_build/doctrees/: CHANGELOG.doctree  advanced.doctree  api.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  CHANGELOG.html  advanced.html  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: advanced.doctree  api.doctree  environment.pickle  index.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/rake_nltk/: rake.html
docs/_build/html/_sources/: CHANGELOG.rst.txt  advanced.rst.txt  index.rst.txt
docs/_build/html/_static/: documentation_options.js
docs/_templates/: social.html
rake_nltk/: __init__.py  __version__.py  rake.py
tests/: rake_test.py
